# minimal-poetry-pybind11-cmake-example

./: .gitignore  README.md  pyproject.toml
pb_ex/: CMakeLists.txt  build.py
pb_ex/src/: pybind_boiler.cpp  source.cpp  source.h
